// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoleDropdown for file shares when an existing role is present renders a button with existing role if given for resource type file 1`] = `
<span class="oc-flex oc-flex-middle"><oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="none" id="files-collaborators-role-button-new" class="files-recipient-role-select-btn"><span>Viewer</span>
<oc-icon-stub name="arrow-down-s" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
</oc-button-stub>
<oc-drop-stub dropid="oc-drop-17" toggle="#files-collaborators-role-button-new" position="bottom-start" mode="click" closeonclick="true" paddingsize="remove">
  <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-viewer" class="files-recipient-role-drop-btn oc-py-xs oc-px-s selected">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <oc-icon-stub name="check" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </li>
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-editor" class="files-recipient-role-drop-btn oc-py-xs oc-px-s">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <!---->
      </oc-button-stub>
    </li>
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-custom" class="files-recipient-role-drop-btn oc-py-xs oc-px-s">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <!---->
      </oc-button-stub>
    </li>
  </oc-list-stub>
</oc-drop-stub>
<oc-drop-stub dropid="oc-drop-18" toggle="" position="bottom-start" mode="manual" target="#files-collaborators-role-button-new" paddingsize="small" class="files-recipient-custom-permissions-drop">
  <h4 class="oc-text-bold oc-text-initial">Custom permissions</h4>
  <oc-list-stub class="oc-mb">
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-read" disabled="true" value="[object Object],[object Object]" option="[object Object]" label="Read" size="medium" data-testid="files-collaborators-permission-read" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-update" value="[object Object],[object Object]" option="[object Object]" label="Update" size="medium" data-testid="files-collaborators-permission-update" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-create" value="[object Object],[object Object]" option="[object Object]" label="Create" size="medium" data-testid="files-collaborators-permission-create" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-delete" value="[object Object],[object Object]" option="[object Object]" label="Delete" size="medium" data-testid="files-collaborators-permission-delete" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-share" value="[object Object],[object Object]" option="[object Object]" label="Share" size="medium" data-testid="files-collaborators-permission-share" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
  </oc-list-stub>
  <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns">
    <oc-button-stub type="button" size="small" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium">Cancel</oc-button-stub>
    <oc-button-stub type="button" size="small" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium">Apply</oc-button-stub>
  </div>
</oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares when an existing role is present renders a button with existing role if given for resource type folder 1`] = `
<span class="oc-flex oc-flex-middle"><oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="none" id="files-collaborators-role-button-new" class="files-recipient-role-select-btn"><span>Viewer</span>
<oc-icon-stub name="arrow-down-s" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
</oc-button-stub>
<oc-drop-stub dropid="oc-drop-15" toggle="#files-collaborators-role-button-new" position="bottom-start" mode="click" closeonclick="true" paddingsize="remove">
  <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-viewer" class="files-recipient-role-drop-btn oc-py-xs oc-px-s selected">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <oc-icon-stub name="check" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </li>
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-editor" class="files-recipient-role-drop-btn oc-py-xs oc-px-s">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <!---->
      </oc-button-stub>
    </li>
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-custom" class="files-recipient-role-drop-btn oc-py-xs oc-px-s">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <!---->
      </oc-button-stub>
    </li>
  </oc-list-stub>
</oc-drop-stub>
<oc-drop-stub dropid="oc-drop-16" toggle="" position="bottom-start" mode="manual" target="#files-collaborators-role-button-new" paddingsize="small" class="files-recipient-custom-permissions-drop">
  <h4 class="oc-text-bold oc-text-initial">Custom permissions</h4>
  <oc-list-stub class="oc-mb">
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-read" disabled="true" value="[object Object],[object Object]" option="[object Object]" label="Read" size="medium" data-testid="files-collaborators-permission-read" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-update" value="[object Object],[object Object]" option="[object Object]" label="Update" size="medium" data-testid="files-collaborators-permission-update" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-create" value="[object Object],[object Object]" option="[object Object]" label="Create" size="medium" data-testid="files-collaborators-permission-create" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-delete" value="[object Object],[object Object]" option="[object Object]" label="Delete" size="medium" data-testid="files-collaborators-permission-delete" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-share" value="[object Object],[object Object]" option="[object Object]" label="Share" size="medium" data-testid="files-collaborators-permission-share" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
  </oc-list-stub>
  <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns">
    <oc-button-stub type="button" size="small" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium">Cancel</oc-button-stub>
    <oc-button-stub type="button" size="small" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium">Apply</oc-button-stub>
  </div>
</oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares when no existing role is present renders a button with invite text if no existing role given for resource type file 1`] = `
<span class="oc-flex oc-flex-middle"><oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="none" id="files-collaborators-role-button-new" class="files-recipient-role-select-btn"><span>Invite as viewer</span>
<oc-icon-stub name="arrow-down-s" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
</oc-button-stub>
<oc-drop-stub dropid="oc-drop-5" toggle="#files-collaborators-role-button-new" position="bottom-start" mode="click" closeonclick="true" paddingsize="remove">
  <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-viewer" class="files-recipient-role-drop-btn oc-py-xs oc-px-s selected">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <oc-icon-stub name="check" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </li>
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-editor" class="files-recipient-role-drop-btn oc-py-xs oc-px-s">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <!---->
      </oc-button-stub>
    </li>
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-custom" class="files-recipient-role-drop-btn oc-py-xs oc-px-s">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <!---->
      </oc-button-stub>
    </li>
  </oc-list-stub>
</oc-drop-stub>
<oc-drop-stub dropid="oc-drop-6" toggle="" position="bottom-start" mode="manual" target="#files-collaborators-role-button-new" paddingsize="small" class="files-recipient-custom-permissions-drop">
  <h4 class="oc-text-bold oc-text-initial">Custom permissions</h4>
  <oc-list-stub class="oc-mb">
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-read" disabled="true" value="[object Object],[object Object]" option="[object Object]" label="Read" size="medium" data-testid="files-collaborators-permission-read" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-update" value="[object Object],[object Object]" option="[object Object]" label="Update" size="medium" data-testid="files-collaborators-permission-update" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-share" value="[object Object],[object Object]" option="[object Object]" label="Share" size="medium" data-testid="files-collaborators-permission-share" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
  </oc-list-stub>
  <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns">
    <oc-button-stub type="button" size="small" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium">Cancel</oc-button-stub>
    <oc-button-stub type="button" size="small" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium">Apply</oc-button-stub>
  </div>
</oc-drop-stub>
</span>
`;

exports[`RoleDropdown for file shares when no existing role is present renders a button with invite text if no existing role given for resource type folder 1`] = `
<span class="oc-flex oc-flex-middle"><oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="none" id="files-collaborators-role-button-new" class="files-recipient-role-select-btn"><span>Invite as viewer</span>
<oc-icon-stub name="arrow-down-s" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
</oc-button-stub>
<oc-drop-stub dropid="oc-drop-3" toggle="#files-collaborators-role-button-new" position="bottom-start" mode="click" closeonclick="true" paddingsize="remove">
  <oc-list-stub aria-label="Select role for the invitation" class="files-recipient-role-drop-list">
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-viewer" class="files-recipient-role-drop-btn oc-py-xs oc-px-s selected">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <oc-icon-stub name="check" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </li>
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-editor" class="files-recipient-role-drop-btn oc-py-xs oc-px-s">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <!---->
      </oc-button-stub>
    </li>
    <li>
      <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="space-between" gapsize="medium" id="files-recipient-role-drop-btn-custom" class="files-recipient-role-drop-btn oc-py-xs oc-px-s">
        <role-item-stub role="[object Object]" allowsharepermission="true"></role-item-stub>
        <!---->
      </oc-button-stub>
    </li>
  </oc-list-stub>
</oc-drop-stub>
<oc-drop-stub dropid="oc-drop-4" toggle="" position="bottom-start" mode="manual" target="#files-collaborators-role-button-new" paddingsize="small" class="files-recipient-custom-permissions-drop">
  <h4 class="oc-text-bold oc-text-initial">Custom permissions</h4>
  <oc-list-stub class="oc-mb">
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-read" disabled="true" value="[object Object],[object Object]" option="[object Object]" label="Read" size="medium" data-testid="files-collaborators-permission-read" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-update" value="[object Object],[object Object]" option="[object Object]" label="Update" size="medium" data-testid="files-collaborators-permission-update" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-create" value="[object Object],[object Object]" option="[object Object]" label="Create" size="medium" data-testid="files-collaborators-permission-create" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-delete" value="[object Object],[object Object]" option="[object Object]" label="Delete" size="medium" data-testid="files-collaborators-permission-delete" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
    <li class="oc-my-xs">
      <oc-checkbox-stub id="files-collaborators-permission-share" value="[object Object],[object Object]" option="[object Object]" label="Share" size="medium" data-testid="files-collaborators-permission-share" class="oc-mr-xs files-collaborators-permission-checkbox"></oc-checkbox-stub>
    </li>
  </oc-list-stub>
  <div class="files-recipient-custom-permissions-drop-cancel-confirm-btns">
    <oc-button-stub type="button" size="small" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium">Cancel</oc-button-stub>
    <oc-button-stub type="button" size="small" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium">Apply</oc-button-stub>
  </div>
</oc-drop-stub>
</span>
`;
